force-app/main/default/objects/COLA_Uplift_Rules__mdt/COLA_Uplift_Rules__mdt.object-meta.xml
<CustomObject>
    <description>Stores COLA (Cost of Living Adjustment) uplift percentages by Solution Category for renewal pricing</description>
    <label>COLA Uplift Rules</label>
    <pluralLabel>COLA Uplift Rules</pluralLabel>
</CustomObject>