force-app/main/default/objects/COLA_Uplift_Rules__mdt/fields/Default_Uplift_Percent__c.field-meta.xml
<CustomField>
    <fullName>Default_Uplift_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>COLA percentage to apply (e.g., 7.85 for 7.85% increase)</description>
    <label>Default Uplift Percent</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>