force-app/main/default/objects/COLA_Uplift_Rules__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Administrative notes about this COLA rule</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>