force-app/main/default/objects/COLA_Uplift_Rules__mdt/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <description>Date until which this COLA rule is effective (optional)</description>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>