force-app/main/default/objects/COLA_Uplift_Rules__mdt/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <description>Date from which this COLA rule becomes effective</description>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>