force-app/main/default/objects/COLA_Uplift_Rules__mdt/fields/Solution_Category__c.field-meta.xml
<CustomField>
    <fullName>Solution_Category__c</fullName>
    <description>ProductCategory.Name for Solution Category level - used to match products for COLA lookup</description>
    <externalId>true</externalId>
    <label>Solution Category</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>